docs(native): document native-image build, limitations, and container usage